<resources>
    <string name="app_name">Pizza Party</string>
    <string name="number_of_people">Number of people?</string>
    <string name="how_hungry">How hungry?</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="ravenous">Ravenous</string>
    <string name="calculate">Calculate</string>
    <string name="total_pizzas">Total pizzas: %d</string>
    <string name="total_price">Total Price</string>
</resources>