<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.zybooks.pizzaparty.MainActivity">

        <LinearLayout
            android:id="@+id/activity_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context="com.zybooks.pizzaparty.MainActivity">

            <FrameLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <ImageView
                    android:src="@drawable/pizza_background"
                    android:layout_gravity="center"
                    android:layout_height="300dp"
                    android:layout_width="300dp" />

                <TextView
                    android:text="Aaron's Pizzeria"
                    android:textSize="46dp"
                    android:textColor="@color/my_green"
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:gravity="top" />
            </FrameLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:stretchColumns="1">
                <TableRow>
                    <TextView
                        android:layout_span="2"
                        android:text="Register an Account:"
                        android:textSize="26sp"
                        android:layout_gravity="center_horizontal"
                        android:onClick="Register" />

                    <EditText />
                    />
                </TableRow>

                <TableRow>
                    <TextView android:text="Username:" />

                </TableRow>

                <TableRow>
                    <TextView android:text="Password:" />
                    <EditText android:inputType="textPassword" />
                </TableRow>

                <TableRow>
                    <Button
                        android:layout_column="1"
                        android:text="Register" />
                </TableRow>
            </TableLayout>

            <GridLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:useDefaultMargins="true"
                android:columnCount="2">
                <TextView
                    android:textSize="26sp"
                    android:layout_columnSpan="2"
                    android:layout_gravity="center_horizontal"
                    android:text="Login to Account:" />
                <TextView
                    android:text="Username:" />
                <EditText
                    android:layout_gravity="fill_horizontal" />
                <TextView
                    android:text="Password:" />
                <EditText
                    android:layout_gravity="fill_horizontal"
                    android:inputType="textPassword" />
                <Button
                    android:layout_column="1"
                    android:layout_gravity="center"
                    android:text="Login" />
            </GridLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Name for Order"
                android:textSize="@dimen/label_text_size"
                android:labelFor="@id/order_name_edit_text" />

            <EditText
                android:id="@+id/order_name_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter Name"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/number_of_people"
                android:textSize="@dimen/label_text_size"
                android:labelFor="@id/num_attend_edit_text" />

            <EditText
                android:id="@+id/num_attend_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="5"
                android:hint="10"
                android:importantForAutofill="no"
                android:inputType="number"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/how_hungry"
                android:textSize="24sp"
                android:labelFor="@id/hungry_radio_group" />

            <RadioGroup
                android:id="@+id/hungry_radio_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/light_radio_button"
                    android:text="@string/light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/medium_radio_button"
                    android:text="@string/medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />
                <RadioButton
                    android:id="@+id/ravenous_radio_button"
                    android:text="@string/ravenous"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </RadioGroup>

            <TextView
                android:id="@+id/num_pizzas_text_view"
                android:text="@string/total_pizzas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:textSize="24sp"/>

            <Button
                android:id="@+id/calc_button"
                android:text="@string/calculate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="calculateClick" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Specific Toppings:"
                android:layout_marginTop="20dp"
                android:textSize="24sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="19"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Add Any Dressing/Sauce:"
                android:textSize="24sp"
                android:layout_marginTop="20dp"
                />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="19"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Extra Cheese?"
                android:textSize="24sp"
                android:labelFor="@id/hungry_radio_group" />

            <RadioGroup
                android:id="@+id/xchz_radio_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/yes1_radio_button"
                    android:text="Yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/no1_radio_button"
                    android:text="No"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Gluten Free Crust?"
                android:textSize="24sp"
                android:labelFor="@id/hungry_radio_group" />

            <RadioGroup
                android:id="@+id/gf_radio_group"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/yes_radio_button"
                    android:text="Yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/no_radio_button"
                    android:text="No"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Delivery Address"
                android:textSize="24sp"
                android:labelFor="@id/address_edit_text" />

            <EditText
                android:id="@+id/address_edit_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="Enter Address"
                android:importantForAutofill="no"
                android:inputType="text"
                android:minHeight="48dp" />

            <Button
                android:id="@+id/price_button"
                android:text="@string/total_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Please rate our app below:" />

            <RatingBar
                android:id="@+id/ratingBar2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

</ScrollView>